default constructor is to be used